fix: reddot + z-index

--- a/frontend/src/app/components/chart-four/chart-four.component.scss
+++ b/frontend/src/app/components/chart-four/chart-four.component.scss
@@ -7,10 +7,7 @@
 .title-content {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  position: relative;
-  margin-bottom: 1rem;
-  z-index: 4;
+  gap: 10px;
 }
 
 
